fix overflow in NestedFormItem

--- a/src/main/resources/src/components/MainPage/Clients/SelectWorkHistory/SelectWorkHistory.scss
+++ b/src/main/resources/src/components/MainPage/Clients/SelectWorkHistory/SelectWorkHistory.scss
@@ -6,6 +6,7 @@
 
   .main-window {
     width: 100%;
+    padding: 0;
   }
 
   .button {
