--- a/src/main/resources/src/utils/Form/NestedForm/NestedFormItem/NestedFormItem.scss
+++ b/src/main/resources/src/utils/Form/NestedForm/NestedFormItem/NestedFormItem.scss
@@ -70,11 +70,17 @@
 
     .form-item__form {
         width: calc(100%);
-        // overflow: hidden;
         padding-bottom: 10px;
 
         &--hidden {
             padding: 0;
+            height: 0;
+            margin: 0;
+            transform: scaleY(0);
+
+            .form-item__item {
+                margin-top: 0 !important;
+            }
         }
 
         .button {
